--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,6 +4,18 @@ header {
   margin: 0;
 }
 
+/* Colours */
+
+.bg-color-name-title {
+  background-color: #676767;
+}
+
+/* Heading */
+
+.heading {
+  margin-left: 50px;
+}
+
 .logo {
   background-image: url("../images/rosie.jpeg");
   background-position: center;
@@ -13,4 +25,21 @@ header {
   transition: all 0.5s ease-in-out;
   -moz-transition: all 0.5s ease-in-out;
   -webkit-transition: all 0.5s ease-in-out;
+}
+
+.name {
+  font-family: "Exo", sans-serif;
+  font-weight: 100;
+  font-size: 3.25rem;
+  margin-top: 2.75em;
+  color: #fff;
+}
+
+.title {
+  font-family: "Roboto", sans-serif;
+  font-weight: 200;
+  font-size: 2rem;
+  margin-top: 1.15em;
+  color: #fff;
+  margin-bottom: 5em;
 }
