--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,6 +10,19 @@ header {
   background-color: #676767;
 }
 
+.ui-menu-color-home {
+  background-color: #e67e32;
+}
+.ui-menu-color-cv {
+  background-color: #9b59b6;
+}
+.ui-menu-color-contact {
+  background-color: #3498db;
+}
+.ui-menu-color-download {
+  background-color: #525252;
+}
+
 /* Heading */
 
 .heading {
@@ -42,4 +55,18 @@ header {
   margin-top: 1.15em;
   color: #fff;
   margin-bottom: 5em;
+}
+
+.list-inline-item:not(:last-child) {
+  margin: 0;
+}
+
+.menucontainer {
+  font-size: 0;
+  padding-left: 0;
+}
+
+#nav li {
+  font-size: 1rem;
+  padding: 0;
 }
