--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -70,3 +70,38 @@ header {
   font-size: 1rem;
   padding: 0;
 }
+
+.menuitem {
+  height: 120px;
+  text-align: center;
+  padding: 0;
+}
+
+.menuitem a {
+  width: 100%;
+  text-decoration: none;
+  color: #fff;
+  height: 120px;
+}
+
+.menuitem svg {
+  display: block;
+  text-align: center;
+  width: 100%;
+  margin-top: 1.5em;
+  fill: #fafafa;
+  height: 2rem;
+}
+
+.menuitem span {
+  display: block;
+  text-align: center;
+  width: 100%;
+  margin-top: 0.5em;
+  font-family: "Roboto", sans-serif;
+  font-weight: 300;
+  font-size: 1rem;
+  color: #fafafa;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+}
