--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,6 +10,10 @@ header {
   background-color: #676767;
 }
 
+.bg-color-three-reasons {
+  background-color: #fff;
+}
+
 .ui-menu-color-home {
   background-color: #e67e32;
 }
@@ -28,6 +32,13 @@ header {
   font-family: "Exo", sans-serif;
   font-weight: 300;
   color: #fafafa;
+}
+
+.section-heading {
+  font-family: "Exo", sans-serif;
+  font-weight: 300;
+  margin-top: 1.5em;
+  margin-bottom: 2.25em;
 }
 /* Heading */
 
