--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,6 +14,10 @@ header {
   background-color: #fff;
 }
 
+.bg-color-personal-info {
+  background-color: #f4f4f4;
+}
+
 .ui-menu-color-home {
   background-color: #e67e32;
 }
