--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -188,3 +188,31 @@ footer .social-links a:hover svg {
   margin: 0 auto;
   fill: #e67e22;
 }
+
+/* Personal info */
+.personal-info-item {
+  margin-bottom: 1.5em;
+  display: block;
+}
+
+.personal-info-item .value p {
+  display: inline;
+  margin: 0;
+}
+
+.personal-info-item .key {
+  width: 30%;
+  margin-right: 1.25em;
+  display: inline-block;
+  vertical-align: top;
+}
+
+.personal-info-item .key p {
+  font-weight: 700;
+}
+
+.personal-info-item .value {
+  position: relative;
+  display: inline;
+  width: 60%;
+}
