--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,6 +12,7 @@ header {
 
 .bg-color-three-reasons {
   background-color: #fff;
+  margin-bottom: 3em;
 }
 
 .bg-color-personal-info {
@@ -42,7 +43,7 @@ header {
   font-family: "Exo", sans-serif;
   font-weight: 300;
   margin-top: 1.5em;
-  margin-bottom: 2.25em;
+  margin-bottom: 1.25em;
 }
 /* Heading */
 
@@ -215,4 +216,27 @@ footer .social-links a:hover svg {
   position: relative;
   display: inline;
   width: 60%;
+}
+
+/* Skills */
+.progress {
+  position: relative;
+  height: 1.75rem;
+  margin-bottom: 0.15em;
+}
+
+.progress-type {
+  position: absolute;
+  left: 0;
+  font-weight: 400;
+  padding: 3px 30px 2px 10px;
+  color: #fafafa;
+  background-color: rgba(0, 0, 0, 0.2);
+  height: 100%;
+}
+
+.progress-section {
+  margin-top: 2em;
+  padding-left: 2em;
+  padding-right: 2em;
 }
